# bana-rs

./: .gitattributes  Cargo.toml  rustfmt.toml
.github/workflows/: bana-rs-ci.yml
projects/mining-of-massive-datasets/: Cargo.toml
projects/mining-of-massive-datasets/src/: main.rs
projects/the-national-lottery-rs/src/: cli.rs
projects/x-jws-signature-rs/: Cargo.toml
projects/x-jws-signature-rs/www/: package-lock.json
scripts/: install_rust_cli_apps.sh
